--- a/stream-three.html
+++ b/stream-three.html
@@ -7,7 +7,7 @@
 	<body>
 		<nav> 
 		<ul>
-			<li><a href="stream-one.html">Stream One</a></li>
+			<li><a href="index.html">Stream One</a></li>
 			<li><a href="stream-two.html">Stream Two</a></li>
 			<li><a href="stream-three.html">Stream Three</a></li>
 		</ul>
@@ -16,7 +16,7 @@
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
 				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/200px-Python_logo_and_wordmark.svg.png" />
-				<h2>Python<h2>
+				<h2>python<h2>
 			</a>
 		</div>
 		<div class="card">
@@ -34,7 +34,7 @@
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Git">
 				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" />
-				<h3>Git</h3>
+			<h3>Git</h3>
 				
 			</a>
 		</div>
