--- a/stream-three.html
+++ b/stream-three.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<title> Stream Three </title>
     	<link rel="stylesheet" href="Styles/styles23.css" type="text/css" />
@@ -15,38 +15,38 @@
 		<h1> Stream Three </h1>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/200px-Python_logo_and_wordmark.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/200px-Python_logo_and_wordmark.svg.png" alt="Image not found" />
 				<h2>python</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Django_(web_framework)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Django_logo.svg/185px-Django_logo.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/75/Django_logo.svg/185px-Django_logo.svg.png" alt="Image not found" />
 				<h2>django</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Heroku">
-				<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/Heroku_logo.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/en/a/a9/Heroku_logo.png" alt="Image not found"  />
 				<h2>Heroku</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" />
-			<h3>Git</h2>
+				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Image not found" />
+			<h2>Git</h2>
 				
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://image.flaticon.com/icons/svg/25/25231.svg" />
-				<h3>GitHub</h2>
+				<img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Image not found" />
+				<h2>GitHub</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/MySQL">
-				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/124px-MySQL.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/124px-MySQL.svg.png" alt="Image not found" />
 				<h2>MySQL</h2>
 			</a>
 		</div>
