--- a/stream-two.html
+++ b/stream-two.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
 		<title> Stream Two </title>
     	<link rel="stylesheet" href="Styles/styles23.css" type="text/css" />
@@ -15,38 +15,38 @@
 		<h1> Stream Two </h1>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Python_(programming_language)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/200px-Python_logo_and_wordmark.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Python_logo_and_wordmark.svg/200px-Python_logo_and_wordmark.svg.png" alt="Image not found" />
 				<h2>python</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Flask_(web_framework)">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flask_logo.svg/220px-Flask_logo.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3c/Flask_logo.svg/220px-Flask_logo.svg.png" alt="Image not found" />
 				<h2>Flask</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/MongoDB">
-				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/45/MongoDB-Logo.svg/250px-MongoDB-Logo.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/4/45/MongoDB-Logo.svg/250px-MongoDB-Logo.svg.png" alt="Image not found" />
 				<h2>mongoDB</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/MySQL">
-				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/124px-MySQL.svg.png" />
+				<img src="https://upload.wikimedia.org/wikipedia/en/thumb/6/62/MySQL.svg/124px-MySQL.svg.png" alt="Image not found" />
 				<h2>MySQL</h2>
 					
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/Git">
-				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" />
+				<img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Image not found" />
 				<h2>Git</h2>
 			</a>
 		</div>
 		<div class="card">
 			<a href="https://en.wikipedia.org/wiki/GitHub">
-				<img src="https://image.flaticon.com/icons/svg/25/25231.svg" />
+				<img src="https://image.flaticon.com/icons/svg/25/25231.svg" alt="Image not found" />
 				<h2>GitHub</h2>
 			</a>
 		</div>
